Small change of text on index.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,9 +15,9 @@
             <div class="row">
                 <div class="col-lg-7 col-md-7 col-sm-6 col-xs-12">
                     <div class="clearfix"></div>
-                    <h3 class="section-heading">All your local music<br>All the sound quality</h3>
-                    <p class="lead">This is the perfect setup if you have an USB storage device with all your music.<br>
-                                    Just use your preferred iOS/Android mpd player and listen the music with the best quality</p>
+                    <h3 class="section-heading">The music you love, <br>with the best Interface</h3>
+                    <p class="lead">This is the perfect setup if you have a Roon Server on your local network.
+                        <br>Just use your PC/Tablet as controller and listen the music with the best quality</p>
                 </div>
                 <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12 col-lg-offset-1">
                     <img class="img-responsive" src="static/images/raspi.png" alt="" style="max-height: 150px;">
