--- a/app/templates/raspioff.html
+++ b/app/templates/raspioff.html
@@ -24,7 +24,7 @@
 
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-                <button type="submit" class="btn btn-default">Accept</button>
+                <label>{{ form.submit3(class_="btn btn-default") }}</label>
             </div>
         </div>
     </form>
@@ -39,7 +39,7 @@
         </div>
     </div>
 
-    <form action="" method="post" name="form_host">
+    <form action="" method="post" name="form_host" value="form_host">
         {{ form_host.hidden_tag() }}
 
 
@@ -73,11 +73,100 @@
         <br>
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-                <button type="submit" class="btn btn-default">Accept</button>
+                <label>{{ form_host.submit1(class_="btn btn-default") }}</label>
             </div>
         </div>
 
     </form>
+
+    <br>
+    <br>
+
+
+        <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+            <h4>Wifi Configuration</h4>
+        </div>
+    </div>
+
+
+    <form action="" method="post" name="form_wifi" value="form_wifi">
+        {{ form_wifi.hidden_tag() }}
+
+
+        <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right">
+                <label>{{ form_wifi.wifi_name.label }}</label>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                <td>{{ form_wifi.wifi_name(style= "width:100px;") }}</td>
+                    <a href="#" data-toggle="popover" data-placement="bottom"
+                    data-content="Hostname needs to be between 4 and 30 characters and
+                    must contain only letters, numbers or underscore">
+                        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    </a>
+            </div>
+        </div>
+
+
+        <div class="row">
+	        <div class="col-lg-9 col-lg-offset-3 col-md-9 col-md-offset-3 col-sm-9 col-sm-offset-3 col-xs-12">
+                {% if form_wifi.wifi_name.errors %}
+                <ul class="errors">
+                {% for error in form_wifi.wifi_name.errors %}
+        	        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+            </div>
+        </div>
+
+
+
+
+        <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right">
+                <label>{{ form_wifi.password.label }}</label>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                <td>{{ form_wifi.password(style= "width:100px;") }}</td>
+                    <a href="#" data-toggle="popover" data-placement="bottom"
+                    data-content="Hostname needs to be between 4 and 30 characters and
+                    must contain only letters, numbers or underscore">
+                        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    </a>
+            </div>
+        </div>
+
+
+        <div class="row">
+	        <div class="col-lg-9 col-lg-offset-3 col-md-9 col-md-offset-3 col-sm-9 col-sm-offset-3 col-xs-12">
+                {% if form_wifi.password.errors %}
+                <ul class="errors">
+                {% for error in form_wifi.password.errors %}
+        	        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+            </div>
+        </div>
+
+
+
+
+        <br>
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                <label>{{ form_wifi.submit2(class_="btn btn-default") }}</label>
+            </div>
+        </div>
+
+    </form>
+
+
+
+
+
 
     </div>
 </div>
