Minor tweaks to raspioff.html related to wifi view.

--- a/app/templates/raspioff.html
+++ b/app/templates/raspioff.html
@@ -101,8 +101,7 @@
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                 <td>{{ form_wifi.wifi_name(style= "width:100px;") }}</td>
                     <a href="#" data-toggle="popover" data-placement="bottom"
-                    data-content="Hostname needs to be between 4 and 30 characters and
-                    must contain only letters, numbers or underscore">
+                    data-content="You can copy the name of the network from the 'Check Wifi' button">
                         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                     </a>
             </div>
@@ -130,11 +129,6 @@
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                 <td>{{ form_wifi.password(style= "width:100px;") }}</td>
-                    <a href="#" data-toggle="popover" data-placement="bottom"
-                    data-content="Hostname needs to be between 4 and 30 characters and
-                    must contain only letters, numbers or underscore">
-                        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-                    </a>
             </div>
         </div>
 
