added showwifi.html file and raspioff.html functionality, tested and fully working

--- a/app/templates/raspioff.html
+++ b/app/templates/raspioff.html
@@ -163,6 +163,25 @@
 
 
     </div>
+
+
+
+    <div class="bs-example">
+    <!-- Button HTML (to Trigger Modal) -->
+        <a href="{{ url_for('showwifi') }}" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Wifi Networks</a>
+
+    <!-- Modal HTML -->
+        <div id="myModal" class="modal fade">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                <!-- Content will be loaded here from "showmpd.html" file -->
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
 </div>
 
 
