--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,6 +9,7 @@
 
 <a name="services"></a>
 
+    <!-- Option to choose roon server -->
     <div class="content-section-a">
 
         <div class="container">
@@ -28,7 +29,9 @@
 </div>
 
 
-<div class="content-section-b">
+
+    <!-- Option to choose MPD/UPNP server -->
+    <div class="content-section-b">
 
         <div class="container">
 
@@ -53,8 +56,8 @@
 
 
 
-
-<div class="content-section-a">
+    <!-- Option to choose LMS server -->
+    <div class="content-section-a">
 
         <div class="container">
             <div class="row">
@@ -70,10 +73,12 @@
             </div>
 
         </div>
-</div>
+    </div>
 
 
-<div class="content-section-b">
+
+    <!-- Option to choose Airplay streaming -->
+    <div class="content-section-b">
 
         <div class="container">
 
