--- a/app/templates/mpdconfig.html
+++ b/app/templates/mpdconfig.html
@@ -10,6 +10,12 @@
 
 <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
     <div class="well">
+
+
+
+
+        <!-- volume setting form -->
+        <!-- =================== -->
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
             <h4>Volume and Replay Gain</h4>
@@ -86,12 +92,15 @@
         <br>
         <br>
 
+
+
+        <!-- buffer setting form -->
+        <!-- =================== -->
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
                 <h4>Buffering</h4>
             </div>
         </div>
-
 
 
         <form action="" method="post" name="form_buffer">
@@ -139,6 +148,8 @@
 
 
 
+    <!-- modal to call showmpd page -->
+    <!-- ========================== -->
     <div class="bs-example">
     <!-- Button HTML (to Trigger Modal) -->
         <a href="{{ url_for('showmpd') }}" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Current Settings</a>
