--- a/app/templates/showwifi.html
+++ b/app/templates/showwifi.html
@@ -4,7 +4,7 @@
 
 <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" style="text-align:center">Wifi</h4>
+        <h4 class="modal-title" style="text-align:center">Available Networks</h4>
       </div>
 
 <div class="row">
