"system" view split into system and networks. Config files added to files directory

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,8 +37,9 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
 
-                    <li><a href="{{ url_for('raspioff') }}">System</a></li>
+                    <li><a href="{{ url_for('systemconfig') }}">System</a></li>
                         <li><a href="{{ url_for('mpdconfig') }}">Player</a></li>
+                        <li><a href="{{ url_for('networkconfig') }}">Network</a></li>
                     </ul>
 
 
