Added "AudioOutput" to views and systemconfig.html, not tested yet

--- a/app/templates/mpdconfig.html
+++ b/app/templates/mpdconfig.html
@@ -14,7 +14,7 @@
 
 
 
-        <!-- volume setting form -->
+        <!-- form for volume settings in the player -->
         <!-- =================== -->
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
@@ -94,7 +94,7 @@
 
 
 
-        <!-- buffer setting form -->
+        <!-- form for buffering settings in the player -->
         <!-- =================== -->
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
