--- a/app/templates/networkconfig.html
+++ b/app/templates/networkconfig.html
@@ -54,7 +54,7 @@
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
                 <!-- field that submit the form back to python -->
-                <label>{{ form_host.submit1(class_="btn btn-default") }}</label>
+                <label>{{ form_host.submit_hostname(class_="btn btn-default") }}</label>
             </div>
         </div>
 
@@ -135,7 +135,7 @@
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
                 <!-- field that submit the form back to python -->
-                <label>{{ form_wifi.submit2(class_="btn btn-default") }}</label>
+                <label>{{ form_wifi.submit_wifi(class_="btn btn-default") }}</label>
             </div>
         </div>
 
