--- a/app/templates/mpdconfig.html
+++ b/app/templates/mpdconfig.html
@@ -83,7 +83,7 @@
 
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-                <button type="submit" class="btn btn-default">Accept</button>
+                <label>{{ form_volume.submit_volume(class_="btn btn-default") }}</label>
             </div>
         </div>
 
@@ -137,7 +137,7 @@
 
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-                <button type="submit" class="btn btn-default">Accept</button>
+                <label>{{ form_buffer.submit_buffer(class_="btn btn-default") }}</label>
             </div>
         </div>
 
