--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,7 +38,8 @@
                     <ul class="nav navbar-nav">
 
                     <li><a href="{{ url_for('systemconfig') }}">System</a></li>
-                        <li><a href="{{ url_for('mpdconfig') }}">Player</a></li>
+                        <li><a href="{{ url_for('mpdconfig') }}">MPD Player</a></li>
+                        <li><a href="{{ url_for('squeezeconfig') }}">Squeezebox Player</a></li>
                         <li><a href="{{ url_for('networkconfig') }}">Network</a></li>
                     </ul>
 
