squeezelite added to views and squeezeconfig.html created

--- a/app/templates/mpdconfig.html
+++ b/app/templates/mpdconfig.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<h3 style="text-align: center;">Configure your DigiWave</h3>
+<h3 style="text-align: center;">Configure your MPD Player</h3>
 
 
 {% include "flash.html" %}
