added ShowSqueeze to models.py and fixed ShowWifi and ShowMpd

--- a/app/templates/mpdconfig.html
+++ b/app/templates/mpdconfig.html
@@ -165,8 +165,7 @@
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                     <td>{{ form_audio_output.audio_output(style= "width:110px;") }}</td>
                         <a href="#" data-toggle="popover" data-placement="bottom"
-                        data-content="This setting adjusts the size of internal decoded audio buffering.
-                        Changing this may have undesired effects. Don't change this if you don't know what you are doing.">
+                        data-content="You can choose the audio output, the options are USB and the Hifiberry family">
                         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                         </a>
                 </div>
